include_directories(../src)
include_directories(../third_party)

add_library(gtest STATIC ../third_party/gtest/gtest-all.cc ../third_party/gtest/gtest_main.cc)

foreach(source binary_cube_test.cpp builder_test.cpp clipping_test.cpp extractor_test.cpp smart_ptr_test.cpp variant_test.cpp math_test.cpp)
  get_filename_component(basename ${source} NAME_WE)
  add_executable(${basename} ${source})
  target_link_libraries(${basename} sigen gtest pthread)
  add_test(${basename} ${basename})
endforeach(source)

if(BUILD_MAIN)
  foreach(source fileutils_test.cpp swc_writer_test.cpp)
    get_filename_component(basename ${source} NAME_WE)
    add_executable(${basename} ${source})
    target_link_libraries(${basename} sigen sigen_io gtest pthread boost_system boost_filesystem glog)
    add_test(${basename} ${basename})
  endforeach(source)
endif(BUILD_MAIN)
